the comments pass: every hand-written comment in the tree held to the 2026-08-18 rule — a comment survives only if a future session needs it to avoid a mistake, and where the content lives somewhere else the comment is a pointer. 729 files, 76,150 comment-shaped lines to 53,815 (60,250 hand-written to 40,626; the generated bindings' 15,900 to 13,189 through their templates in tools/kaya-bindgen), -44,338/+21,200 lines against e268abe, and the non-comment content of every file byte-identical to HEAD once comments are stripped — proven file by file by a script, not asserted — except one Haskell `let` whose first binding moved onto the `let` line when the comment between them went, and the one code change the pass's own matrix demanded, below. Thirteen file groups in parallel, each under one charge: keep a pointer, a warning, `SAFETY:`, a contract (a wire layout table, a truth table the code implements, a marker a gate anchors on) and the first sentence of a public doc comment; cut narration, teaching prose, restated invariants, arguments that the code is correct and the history of how the code got here; and every measured finding with no home moved to docs/traps.md FIRST with the pointer left behind — 50 new entries (982 lines), the WinUI backend's 17 among them, the mac harness's first-metrics race, the Go c-shared `os.Getenv` void, the per-lane duration ceilings' provenance out of validate-all's 172-line BUDGETS history. The guests are held tightest: a two-line header naming the scene and its steps file, and one-line warnings only (3,732 to 1,413 in the JVM/C#/Swift/Haskell/OCaml guests, 4,087 to 1,333 in the Rust/Go/Python/JS/C ones). THE POINTER IS NOW A CONVENTION WITH A GATE: `docs/traps.md: <headline>` names a trap by its headline's opening words, and check-doc-refs' new traps-pointer clause refuses a pointer no headline opens with (the `## ` entries and the older `- **bullet**` entries alike, wrapped comment lines joined; self-test N8; 101 pointers resolved, 2